Fixed favicon not showing. CC validator number input doesn't show arrows on firefox

--- a/fun-projects/Pages/assets/style.css
+++ b/fun-projects/Pages/assets/style.css
@@ -4,23 +4,12 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input[type="number"] {
+  appearance: textfield;
+}
 #card,
 #doubleCard {
   letter-spacing: 2px;
-}
-
-.custom-text-input {
-  border: 1px solid gray;
-  border-radius: 5px;
-  font-size: 22px;
-  padding: 6px;
-  transition: 200ms;
-  outline: none;
-}
-.custom-text-input:focus {
-  border-color: #86b7fe;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  background-color: rgb(235, 235, 235);
 }
 
 .invisible-custom {
